--- a/notes/_quarto.yml
+++ b/notes/_quarto.yml
@@ -11,9 +11,9 @@ book:
     - 01_intro.qmd
     - 11_ls.qmd
     - 12_lslinalg.qmd
-    - 13_lsnla.qmd
-    - 20_ugbo.qmd
-    - 21_ugbo2.qmd
+    # - 13_lsnla.qmd
+    # - 20_ugbo.qmd
+    # - 21_ugbo2.qmd
     - references.qmd
   appendices:
     - 00_linalg.qmd
