some progress on NLA notes

--- a/notes/_quarto.yml
+++ b/notes/_quarto.yml
@@ -11,7 +11,8 @@ book:
     - 01_intro.qmd
     - 11_ls.qmd
     - 12_lslinalg.qmd
-    # - 13_lsnla.qmd
+    - 13_lsnla.qmd
+    - 14_lssvd.qmd
     # - 20_ugbo.qmd
     # - 21_ugbo2.qmd
     - references.qmd
