--- a/notes/_quarto.yml
+++ b/notes/_quarto.yml
@@ -14,7 +14,7 @@ book:
     - 13_lsnla.qmd
     - 14_lssvd.qmd
     - 15_svdcond.qmd
-    # - 20_ugbo.qmd
+    - 20_ugbo.qmd
     # - 21_ugbo2.qmd
     - references.qmd
   appendices:
